# pybind11_cmake_test

./: CMakeLists.txt  prereq_linux.sh  prereq_macos.sh  prereq_windows.cmd  pyproject.toml  setup.py
.github/workflows/: wheels.yml
src/: main.cpp
